portfolio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yorchdev
  namespace: yorch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yorchdev
  template:
    metadata:
      labels:
        app: yorchdev
    spec:
      containers:
        - name: yorchdev
          image: registry.yorch.cloud/yorch.dev/yorch.dev:23611fbf5bb049efc8c0b88bfc450e8c131a70b3
          ports:
            - containerPort: 8080
          resources:
            limits: {}
      imagePullSecrets:
        - name: harbor-secret
