portfolio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yorchdev-service
  labels:
    app: yorchdev
  namespace: yorch
spec:
  selector:
    app: yorchdev
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
